log
Sun 10 Sep 2023 01:36:43 AM UTC: 
 tests:  0|6
total_score: 0/70
1ac0a20
Sun 10 Sep 2023 01:48:51 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
085a2eb
Sun 10 Sep 2023 01:49:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:59:11: error: ‘*hashMap.buckets’ is used uninitialized [-Werror=uninitialized]
   59 |   *hashMap->buckets = buckets;
      |    ~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
aa1000e
Sun 10 Sep 2023 01:49:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:20: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   59 |   hashMap->buckets = buckets;
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
079fb0e
Sun 10 Sep 2023 01:50:14 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
9bb3dd8
Sun 10 Sep 2023 02:02:47 AM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
8ca4f45
Sun 10 Sep 2023 02:04:51 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   58 |   hashMap.bucket = malloc(sizeof(Pair) * capacity);
      |           ^~~~~~
      |           buckets
hashmap.c:63:10: error: function returns address of local variable [-Werror=return-local-addr]
   63 |   return &hashMap;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ca02088
Sun 10 Sep 2023 02:05:30 AM UTC: 
 hashmap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:59:11: error: ‘*hashMap.buckets’ is used uninitialized [-Werror=uninitialized]
   59 |   *hashMap->buckets = buckets;
      |    ~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
deae6df
Sun 10 Sep 2023 02:05:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:20: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   59 |   hashMap->buckets = buckets;
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
e6aa9e2
Sun 10 Sep 2023 02:05:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2c10603
Sun 10 Sep 2023 02:08:17 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
55d59bb
Sun 10 Sep 2023 02:11:00 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
fdb5e9a
Sun 10 Sep 2023 02:11:38 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a02f2ce
Sun 10 Sep 2023 02:16:25 AM UTC: 
 hashmap.c | 39 +++++++++++++--------------------------
 1 file changed, 13 insertions(+), 26 deletions(-)
 tests:  1|5
total_score: 10/70
925eca7
Sun 10 Sep 2023 02:17:11 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
b7649a5
Sun 10 Sep 2023 02:18:56 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
c7503f0
Sun 10 Sep 2023 02:20:06 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
6f67c87
Sun 10 Sep 2023 02:23:51 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|5
total_score: 20/70
916e0ca
Sun 10 Sep 2023 02:26:42 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
990e568
Sun 10 Sep 2023 02:27:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
d88ca01
Sun 10 Sep 2023 02:29:29 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|5
total_score: 20/70
2b8e351
Sun 10 Sep 2023 02:33:55 AM UTC: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
7e03922
Sun 10 Sep 2023 02:34:33 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|4
total_score: 30/70
eedcce0
Sun 10 Sep 2023 02:41:28 AM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
hashmap.c:4:21: error: extra tokens at end of #include directive [-Werror]
    4 | #include <stdbool.h>>
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
832a6d1
Sun 10 Sep 2023 02:41:40 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a4190b0
Sun 10 Sep 2023 02:42:28 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
eb50058
Sun 10 Sep 2023 02:42:42 AM UTC: 
 hashmap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  6|4
total_score: 30/70
5f742dc
Sun 10 Sep 2023 02:49:01 AM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:86:49: error: expected ‘)’ before ‘end’
   86 |         if(is_equal(map->buckets[pos]->key, key)
      |           ~                                     ^
      |                                                 )
   87 |           end == true;
      |           ~~~                                    
hashmap.c:88:7: error: expected expression before ‘}’ token
   88 |       }
      |       ^
Compilation failed
d3c86bf
Sun 10 Sep 2023 02:49:12 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:87:15: error: statement with no effect [-Werror=unused-value]
   87 |           end == true;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
6ac1dd4
Sun 10 Sep 2023 02:58:34 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4a89159
Sun 10 Sep 2023 03:02:51 AM UTC: 
 hashmap.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  6|4
total_score: 30/70
d1386d6
Sun 10 Sep 2023 03:07:15 AM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
45edb40
Sun 10 Sep 2023 03:09:26 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
a4b89f1
Sun 10 Sep 2023 03:10:40 AM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  6|4
total_score: 30/70
73c0bf4
Sun 10 Sep 2023 03:11:18 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
c6f7617
Sun 10 Sep 2023 03:16:12 AM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
29decc6
Sun 10 Sep 2023 03:16:33 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
Sun 10 Sep 2023 03:24:51 AM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  6|4
total_score: 30/70
69e4bcb
Sun 10 Sep 2023 05:12:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b752c3
Sun 10 Sep 2023 05:17:24 PM UTC: 
 hashmap.c | 16 +++-------------
 1 file changed, 3 insertions(+), 13 deletions(-)
 tests:  5|4
total_score: 30/70
0d0a2dc
Sun 10 Sep 2023 05:18:23 PM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  6|4
total_score: 30/70
821d527
Sun 10 Sep 2023 05:22:12 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  5|4
total_score: 30/70
8157e61
Sun 10 Sep 2023 05:22:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2282e1e
Sun 10 Sep 2023 05:28:09 PM UTC: 
 hashmap.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
 tests:  5|4
total_score: 30/70
ccb1ba1
Sun 10 Sep 2023 05:29:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:90:24: error: ‘*(map->buckets + (sizetype)((long unsigned int)pos * 8))’ is a pointer; did you mean to use ‘->’?
   90 |       map->buckets[pos].key = NULL;
      |                        ^
      |                        ->
Compilation failed
bdddd4f
